test/spec_vectors/simd_int_to_int_extend/fail/module_4.wat
(module (func (result v128) (i16x8.extend_low_i8x16_u (i32.const 0))))